test/resources/type-checking/bad/WrongReturnType.cc
int main() {
  bool b = true;

  return (b == b);
}
